--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "simplex-noise": "^4.0.0",
+    "three": "^0.143.0"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
